Add project docs and gitignore for reputation dashboard
CLAUDE.md captures project context, tech stack, scoring assumptions,
and conventions so future sessions can pick up where we left off.
PLAN.md outlines the phased implementation approach with deployment
moved early (Phase 1) to pave the deploy path before adding features.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@
 /Example_Review_Comparison.csv
 /Example_Review_Comparison.xlsx
 /kasa-dir-in-jobs-repo
+
+# Backend
+backend/.venv/
+backend/dev.db
+backend/__pycache__/
+backend/app/__pycache__/
+**/__pycache__/
+*.pyc
+.env
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+/.DS_Store
