--- a/backend/requirements.in
+++ b/backend/requirements.in
@@ -4,7 +4,7 @@ uvicorn[standard]
 sqlalchemy
 psycopg[binary]
 python-jose[cryptography]
-passlib[bcrypt]
+bcrypt
 python-multipart
 python-dotenv
 httpx
