--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,10 @@ anyio==4.12.1
     #   httpx
     #   starlette
     #   watchfiles
+apify-client==2.5.0
+    # via -r requirements.in
+apify-shared==2.2.0
+    # via apify-client
 bcrypt==5.0.0
     # via -r requirements.in
 certifi==2026.1.4
@@ -19,6 +23,8 @@ cffi==2.0.0
     # via cryptography
 click==8.3.1
     # via uvicorn
+colorama==0.4.6
+    # via apify-client
 cryptography==46.0.5
     # via python-jose
 dnspython==2.8.0
@@ -44,10 +50,14 @@ idna==3.11
     #   anyio
     #   email-validator
     #   httpx
+impit==0.11.0
+    # via apify-client
 mako==1.3.10
     # via alembic
 markupsafe==3.0.3
     # via mako
+more-itertools==10.8.0
+    # via apify-client
 psycopg==3.3.2
     # via -r requirements.in
 psycopg-binary==3.3.2
